gitops-lab/apps/httpbin/httpbin-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-v1
  namespace: workload
  labels:
    app: httpbin
    version: v1
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: httpbin
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-v2
  namespace: workload
  labels:
    app: httpbin
    version: v2
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: httpbin
    version: v2
